--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "fictional-university-theme",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "wp-scripts build",
@@ -19,5 +18,6 @@
     "axios": "^0.21.1",
     "jquery": "^3.7.1",
     "normalize.css": "^8.0.1"
-  }
+  },
+  "description": ""
 }
